--- a/frontend/src/Components/Crop_Add/Crop_Add.css
+++ b/frontend/src/Components/Crop_Add/Crop_Add.css
@@ -1,7 +1,7 @@
 /* Crop_Add.css */
 .crop-add-page {
     min-height: 100vh;
-    background-image: url('F:\3RD_YEAR\2ND_SEM\ITPM_Project\frontend\src\Images\pic1.webp'); /* Adjust path to your image */
+    background-image: url('C:\Users\ASUS\Documents\GreenHarvest\frontend\src\Images\pic1.webp'); /* Adjust path to your image */
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
