--- a/frontend/src/Components/Crop_Update/Crop_Update.css
+++ b/frontend/src/Components/Crop_Update/Crop_Update.css
@@ -7,7 +7,7 @@
   padding: 20px;
   font-family: Arial, sans-serif;
   /* Add background image */
-  background-image: url('F:\3RD_YEAR\2ND_SEM\ITPM_Project\frontend\src\Images\pic4.jpg'); /* Example image URL */
+  background-image: url('C:\Users\ASUS\Documents\GreenHarvest\frontend\src\Images\pic4.jpg'); /* Example image URL */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
