--- a/frontend/src/Components/Crop_History/Crop_History.css
+++ b/frontend/src/Components/Crop_History/Crop_History.css
@@ -5,7 +5,7 @@
   padding: 20px;
   position: relative; /* For positioning the back button */
   min-height: 100vh; /* Full viewport height */
-  background-image: url('F:\3RD_YEAR\2ND_SEM\ITPM_Project\frontend\src\Images\pic3.webp'); /* Adjust path to your image */
+  background-image: url('C:\Users\ASUS\Documents\GreenHarvest\frontend\src\Images\pic3.webp'); /* Adjust path to your image */
   background-size: cover;
   background-position: center;
   background-attachment: fixed; /* Optional: Fixed background for parallax effect */
