--- a/frontend/src/Components/Home/Home.css
+++ b/frontend/src/Components/Home/Home.css
@@ -1,6 +1,6 @@
 /* Home.css */
 .home-container {
-  background-image: url('F:\3RD_YEAR\2ND_SEM\ITPM_Project\frontend\src\Images\pic2.jpg'); /* Relative path */
+  background-image: url('C:\Users\ASUS\Documents\GreenHarvest\frontend\src\Images\pic2.jpg'); /* Relative path */
   background-size: cover;
   background-position: center;
   background-attachment: fixed; /* Optional: Fixed background for parallax effect */
