--- a/frontend/src/Components/Home/Home.css
+++ b/frontend/src/Components/Home/Home.css
@@ -33,20 +33,21 @@
 .home-title {
   font-size: 3rem;
   font-weight: 700;
-  margin-bottom: 20px;
+  margin-top: 5px;
+  margin-bottom: 10px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .home-intro {
-  font-size: 1.2rem;
+  font-size: 1.7rem;
   line-height: 1.6;
   margin-bottom: 30px;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 .home-features {
-  background-color: rgba(255, 255, 255, 0.9);
-  color: #333;
+  background-color: rgba(72, 74, 73, 0.9);
+  color: #fbf8f8;
   padding: 20px;
   border-radius: 10px;
   margin-bottom: 30px;
@@ -54,8 +55,10 @@
 }
 
 .home-features h2 {
-  font-size: 1.8rem;
-  margin-bottom: 15px;
+  color: #212121;
+  font-size: 2.8rem;
+  margin-bottom: 10px;
+  padding-top: 5px;
 }
 
 .home-features ul {
@@ -64,7 +67,7 @@
 }
 
 .home-features li {
-  font-size: 1rem;
+  font-size: 1.5rem;
   margin-bottom: 10px;
   line-height: 1.5;
 }
@@ -76,8 +79,10 @@
 }
 
 .home-btn {
+  background-color: aqua;
   font-size: 1.1rem;
   padding: 12px 24px;
+  color: #232222;
   border: none;
   border-radius: 5px;
   cursor: pointer;
